# Fin_tech

./: .env  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260327_0001_create_payments_and_outbox.py
app/: main.py
app/api/: deps.py
app/api/v1/: payments.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: outbox.py  payment.py
app/repositories/: outbox_repository.py  payment_repository.py
app/schemas/: events.py  payment.py
app/services/: message_bus.py  payment_processor.py  payment_service.py
app/workers/: outbox_publisher.py  payment_consumer.py
scripts/: example_webhook.py
