[tool.poetry]
name = "payment-service"
version = "0.1.0"
description = "Async payment processing service"
authors = ["OpenAI <support@openai.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
SQLAlchemy = {version = "^2.0.32", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
faststream = {extras = ["rabbit"], version = "^0.5.20"}
httpx = "^0.27.0"
python-json-logger = "^2.0.7"
tenacity = "^9.0.0"
structlog = "^24.4.0"
uvloop = {version = "^0.20.0", markers = "sys_platform != 'win32'"}
orjson = "^3.10.7"
psycopg = {version = "^3.2.1", extras = ["binary"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
